# cves_analytics

./: .gitignore  .pre-commit-ignore  CVSS_IMPROVEMENTS.md  DEMO_REPORT.md  DUPLICATE_ANALYSIS.md  LICENSE  README.md  REPORT_IMPROVEMENTS.md  SECURITY.md  TEST_RESULTS.md  analyse_data-v2.py  analyse_data.py  create_dataset.py  download_data.py  pyproject.toml  scan_images.py  testing-bayes.ipynb  testing-cvss23.ipynb  testing-cwe.ipynb  testing-grype.ipynb  testing-jira.ipynb  testing-spacy.ipynb  testing-systemgen.ipynb  testing.ipynb
config/: services.yaml
docs/: BAYESIAN_RISK_ASSESSMENT.md
localutils/: cveutils.py  dockerscanhelper.py  errorhandler.py  metricshelper.py  simsystemhelper.py  vulnshelper.py
src/: __init__.py
src/analysis/: attack_scenario_analyzer.py
src/cli/: __init__.py  create_dataset.py  generate_simulation.py  pipeline.py  run_pipeline.py  scan_images.py
src/core/: __init__.py  bayesian_risk.py  cvev5_loader.py  cvev5_processor.py  cvss_bt_processor.py  cvss_models.py  cvss_parser.py  cvss_vector_reassessment.py  cwe_processor.py  docker_scanner.py  epss_processor.py  kev_processor.py  nlp_extractor.py  remediation_planner.py  risk_scoring.py  threat_intelligence.py  vulnerability_analyzer.py  vulnrichment_processor.py
src/simulation/: __init__.py  (+4 more)
templates/: analyse.html  index.html  index.html.j2
tests/: __init__.py  conftest.py  test_config.py  test_cvev5_processor.py  test_cvss_parser.py  test_cvss_vector_reassessment.py  test_environment_context.py  test_error_handling.py  test_logging_config.py  test_nlp_extractor.py  test_pipeline_structure.py  test_scenario_config.py  test_security_controls.py  test_vulnerability_analyzer.py
(+12 files in other folders)
