[project]
name = "CVE_analyses"
version = "0.1.0"
description = "Various CVE analyses, PoCs, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "keras>=3.7.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=18.1.0",
    "pyexploitdb>=0.2.61",
    "pyldavis>=3.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.4",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.3",
    "trufflehog>=2.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.13",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pip>=0.5.18",
    "uv",
]
