[project]
name = "test2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cve-bin-tool>=3.4",
    "docker>=7.1.0",
    "faker>=36.1.1",
    "flask>=3.1.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "keras>=3.7.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=6.0.0",
    "plotly",
    "pyarrow>=18.1.0",
    "pyexploitdb>=0.2.61",
    "pygrype>=0.4.0",
    "pyldavis>=3.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.4",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.13",
]
